--- a/stylesheet.css
+++ b/stylesheet.css
@@ -10,7 +10,7 @@ header{
     position: relative;
 }
 
-@media only screen and (max-width: 600px) {
+@media (max-width: 750px) {
     .header{
         width: 90%;
         padding: 15px;
@@ -46,13 +46,13 @@ header{
 }
 
 
-@media only screen and (min-width: 601px) {
+@media (min-width: 750px) {
     .home{
         width: 100%;
         display: inline-flex;
     }
 }
-@media only screen and (max-width: 600px) {
+@media (max-width: 750px) {
     .home{
         width: 90%;
     }
@@ -210,7 +210,7 @@ header{
     border-radius: 9999px
 }
 
-@media only screen and (min-width: 601px) {
+@media (min-width: 750px) {
     .footer{
         display: inline-flex;
         margin-left: 85%;
@@ -218,7 +218,7 @@ header{
         bottom : 0;
     }
 }
-@media only screen and (max-width: 600px) {
+@media (max-width: 750px) {
     .footer{
         display: inline-flex;
         width: 100%;
@@ -232,7 +232,7 @@ header{
     text-decoration: none
 }
 
-@media only screen and (min-width: 601px){
+@media (min-width: 750px){
 #container{
     width: 50vw;
     mask: linear-gradient(90deg, transparent, white 40%, white 60%, transparent);
@@ -265,7 +265,7 @@ li{
 }
 }
 
-@media only screen and (max-width: 601px){
+@media (max-width: 750px){
     ul{
         gap: 10px;
         list-style: none;
