--- a/static/portfolio.css
+++ b/static/portfolio.css
@@ -60,6 +60,13 @@ input[type="radio"]:checked+label{
 
 .project-graphic{
     width: 50%;
+    align-self: center;
+}
+
+.graphic{
+    display: block;
+    width: 100%;
+    height: auto;
 }
 
 @media (max-width: 700px){
